[gd_scene load_steps=7 format=3 uid="uid://bdgs67hdaqnpf"]

[ext_resource type="PackedScene" uid="uid://ddl4cwe4ng3gb" path="res://scenes/enemies/enemy.tscn" id="1_td5fj"]
[ext_resource type="Script" path="res://scenes/enemies/missile/missile_enemy.gd" id="2_oolgw"]
[ext_resource type="Texture2D" uid="uid://boakomsr0k3w3" path="res://assets/enemies/missile-enemy.png" id="3_2rgxv"]
[ext_resource type="PackedScene" uid="uid://b7ywe00dmmex7" path="res://scenes/bullet/missile/missile_bullet.tscn" id="3_ydige"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vvka1"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rnffm"]
size = Vector2(20, 16)

[node name="MissileEnemy" instance=ExtResource("1_td5fj")]
script = ExtResource("2_oolgw")
bullet_scene = ExtResource("3_ydige")

[node name="Sprite" parent="." index="0"]
texture = ExtResource("3_2rgxv")

[node name="CollisionShape" parent="." index="1"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_vvka1")

[node name="CollisionShape" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_rnffm")

[node name="FireTimer" type="Timer" parent="." index="3"]
wait_time = 5.0

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
